k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devsecops-service
spec:
  selector:
    app: devsecops-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer
